<resources>
    <string name="app_name">SmartHomie</string>
    <string name="nav_devices">Devices</string>
    <string name="nav_routines">Routines</string>
    <string name="nav_home">Home</string>
    <string name="action_help">Help</string>
    <string name="action_settings">Settings</string>
    <string name="new_device">New device</string>
    <string name="new_routine">New routine</string>
    <string name="Settings">Settings</string>
    <string name="receive_notif">Receive notifications</string>
    <string name="notification_title">Device Change!</string>
    <string name="notification_text_before"> </string>
    <string name="notification_text_after">\'s value changed!</string>
    <string name="select_devices">Select Devices</string>
    <string name="enter_routine_name">Entry name...</string>
    <string name="save_routine">Save</string>
    <string name="remove_notifications">Remove notifications</string>
    <string name="add_notifications">Add notifications</string>
    <string name="routine_devices">Routine Devices</string>
    <string name="back_to_routine">Back to routine</string>
    <string name="modify_routine_actions">Modify routine actions for device:</string>
    <string name="add_device">Add Device</string>
    <string name="saveText">Save</string>
    <string name="EntryName">Entry name...</string>
    <string name="selectType">Select Type</string>
    <string name="Cancel">Cancel</string>
    <string name="titleText">Add device</string>
    <string name="channel_name">Channel</string>
    <string name="executed_routine">Executed routine</string>
    <string name="channel_description">Channel</string>
    <string name="help_title">Help</string>
    <string name="help_description">Welcome to the help screen!\n
            Previously created devices and routines are found in the home. To add new devices to the list, make your way to the "Devices" tab and select "New Device".
            \n To remove a device tap on it and select the "Remove" option inside the newly opened window.
            \n To add a routine to the list, make your way to the "Routines" tab and select "New Routine".
            \n To delete a routine tap on it and select the "Remove" option inside the newly opened window.</string>
    <string name="recieve_notifications">Recieve notifications</string>
    <string name="receive_notifications">Receive Notifications</string>



    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- DEVICE NAMES -->
    <string name="curtain_default">Curtain Name</string>
    <string name="oven_default">Oven Name</string>
    <string name="door_default">Door Name</string>
    <string name="light_default">Light Name</string>
    <string name="alarm_default">Alarm Name</string>
    <string name="fridge_default">Fridge Name</string>


    <!-- GENERAL DEVICE STRINGS-->
    <string name="remove_device_text">Remove</string>


    <!-- CURTAIN STRINGS-->
    <string name="curtain_button_on">Raise</string>
    <string name="curtain_button_off">Drop</string>
    <string name="curtain_text_on">Droped</string>
    <string name="curtain_text_off">Raised</string>


    <!-- DOOR STRINGS-->
    <string name="door_text_off">Closed</string>
    <string name="door_button_off">Open</string>
    <string name="lock_text_off">Locked</string>
    <string name="lock_button_off">Unlock</string>
    <string name="door_text_on">Opened</string>
    <string name="door_button_on">Close</string>
    <string name="lock_text_on">Unlocked</string>
    <string name="lock_button_on">Lock</string>

    <!-- FRIDGE STRINGS-->
    <string name="fridge_text_mode">Mode</string>
    <string name="fridge_text_refrigerator">Refrigerator Temperature</string>
    <string name="fridge_text_fridge">Fridge Temperature</string>

    <string-array name="fridge_mode_array">
        <item>Default</item>
        <item>Party</item>
        <item>Vacation</item>
    </string-array>

    <string-array name="fridge_mode_array_L">
        <item>default</item>
        <item>party</item>
        <item>vacation</item>
    </string-array>

    <!-- OVEN STRINGS-->
    <string name="oven_state_text">State</string>
    <string name="oven_heat_text">Heat</string>
    <string name="oven_grill_text">Grill</string>
    <string name="oven_temperature_text">Temperature</string>
    <string name="oven_convection_text">Convection</string>

    <string-array name="oven_state_array">
        <item>On</item>
        <item>Off</item>
    </string-array>
    <string-array name="oven_convection_array">
        <item>Normal</item>
        <item>Eco</item>
        <item>Off</item>
    </string-array>
    <string-array name="oven_heat_array">
        <item>Conventional</item>
        <item>Superior</item>
        <item>Inferior</item>
    </string-array>
    <string-array name="oven_grill_array">
        <item>Large</item>
        <item>Eco</item>
        <item>Off</item>
    </string-array>

    <string-array name="oven_state_array_L">
        <item>on</item>
        <item>off</item>
    </string-array>
    <string-array name="oven_convection_array_L">
        <item>normal</item>
        <item>eco</item>
        <item>off</item>
    </string-array>
    <string-array name="oven_heat_array_L">
        <item>conventional</item>
        <item>superior</item>
        <item>inferior</item>
    </string-array>
    <string-array name="oven_grill_array_L">
        <item>large</item>
        <item>eco</item>
        <item>off</item>
    </string-array>

    <!-- LIGHT STRINGS-->
    <string name="lamp_state_text">State</string>
    <string name="lamp_brightness_text">Brightness</string>
    <string name="lamp_color_text">Color</string>

    <string-array name="lamp_state_array">
        <item>On</item>
        <item>Off</item>
    </string-array>
    <string-array name="lamp_color_array">
        <item>Default</item>
        <item>Red</item>
        <item>Blue</item>
        <item>Green</item>
    </string-array>

    <string-array name="lamp_state_array_L">
        <item>on</item>
        <item>off</item>
    </string-array>
    <string-array name="lamp_color_array_L">
        <item>default</item>
        <item>red</item>
        <item>blue</item>
        <item>green</item>
    </string-array>


    <string-array name="devices">
        <item>Fridge</item>
        <item>Light</item>
        <item>Oven</item>
        <item>Door</item>
        <item>Curtain</item>
    </string-array>

    <!--Toast Fails-->
    <string name="toast_fail_1">Connection failed in door modification</string>
    <string name="toast_fail_2">A device was modified from an outside source</string>
    <string name="toast_fail_3">Connection failed in light modification</string>
    <string name="toast_fail_4">Connection failed in blind modification</string>
    <string name="toast_fail_5">Connection failed in fridge modification</string>
    <string name="toast_fail_6">Connection failed in oven modification</string>
    <string name="toast_fail_7">Device has already been removed</string>
    <string name="toast_fail_8">Connection failed in removal</string>
    <string name="toast_fail_9">Connection failed</string>
    <string name="toast_fail_10">Device removal failed</string>
    <string name="toast_fail_11">Connection failed in device addition</string>
    <string name="toast_fail_12">Device addition failed. Check device properties</string>


    <!--Toast Success-->
    <string name="toast_success_1">Device removal successful</string>
    <string name="toast_success_2">Device added!</string>

    <string name="fail_1">Name is already used!</string>
    <string name="fail_2">Name has invalid characters!</string>
    <string name="fail_3">Name must have at least 3 characters !</string>
    <string name="fail_4">Name must have at least one character!</string>



</resources>
