<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="60dp">


    <TextView
        android:id="@+id/titleName"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:gravity="center_vertical|center"
        android:text="@string/titleText"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@android:color/white"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="60dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    >

                    <EditText
                        android:id="@+id/EntryName"
                        android:layout_width="357dp"
                        android:layout_height="wrap_content"
                        android:ems="100"
                        android:inputType="textPersonName"
                        android:text="@string/EntryName"
                        android:textColor="@android:color/white"/>
                </LinearLayout>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_weight="50"

                    >

                    <TextView
                        android:layout_width="149dp"
                        android:layout_height="33dp"
                        android:text="@string/selectType"
                        android:textColor="@android:color/white"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_weight="50">


                    <Spinner
                        android:id="@+id/dropdownTypes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:drawable/btn_dropdown"
                        android:spinnerMode="dropdown"
                        android:textColor="@android:color/white"/>
                </LinearLayout>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_weight="50">

                    <Button
                        android:id="@+id/buttonSave"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/saveText"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_weight="50">

                    <Button
                        android:id="@+id/buttonCancel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/Cancel"/>
                </LinearLayout>
            </TableRow>
        </TableLayout>
    </ScrollView>

</FrameLayout>