<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="60dp"
    tools:context=".DoorFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/routine_lay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"></LinearLayout>

        <TextView
            android:id="@+id/door_title"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:gravity="center_vertical|center"
            android:text="@string/door_default"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@android:color/white" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="60dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="70"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/door_text"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:text="@string/door_text_off"
                            android:textColor="@android:color/white"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="30"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/door_button"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/door_button_off"/>
                    </LinearLayout>

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="70"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/lock_text"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:text="@string/lock_text_off"
                            android:textColor="@android:color/white"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="30"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/lock_button"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/lock_button_off"/>
                    </LinearLayout>

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="bottom">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="70"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/curtain_text"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:text="@string/remove_device_text"
                            android:textColor="@android:color/white"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="30"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/door_remove_button"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/remove_device_text"/>
                    </LinearLayout>

                </TableRow>

            </TableLayout>
        </ScrollView>
    </LinearLayout>


</FrameLayout>