<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewRoutineFragment"
    android:paddingTop="50dp">

    <!-- TODO: Update blank fragment layout -->

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/colorBackground"
        tools:context=".HomeFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="bottom"
                    android:paddingBottom="20dp"
                    android:paddingTop="20dp"
                    android:text="@string/new_routine"
                    android:textAppearance="@android:style/TextAppearance.Holo.Large"
                    android:textColor="@color/colorWhite" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/select_devices"
                    android:textColor="@color/colorWhite" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/colorWhite"
                        android:hint="@string/enter_routine_name" />

                    <Button
                        android:id="@+id/button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/save_routine" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:background="@color/colorHomeList"
                android:elevation="40dp"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ScrollView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/settings_notifications_scoll"
                        android:background="@color/colorHomeList">

                        <TableLayout
                            android:id="@+id/new_routine_scroll"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                        </TableLayout>
                    </ScrollView>
                </RelativeLayout>

            </LinearLayout>


        </LinearLayout>

    </RelativeLayout>
</FrameLayout>