<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="60dp"
    tools:context=".FridgeFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:gravity="center_vertical|center"
        android:text="@string/fridge_default" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="60dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="70"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/fridge_temp_text"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/fridge_text_fridge"
                        tools:text="Fridge Temperature" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="30"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/fridge_temp_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="number" />
                </LinearLayout>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="70"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/refrigerator_temp_text"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/fridge_text_refrigerator" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="30"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/refridgerator_temp_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="number" />
                </LinearLayout>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="70"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/fridge_mode_Text"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/fridge_text_mode" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="30"
                    android:orientation="horizontal">

                    <Spinner
                        android:id="@+id/fridge_mode_select"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:drawable/btn_dropdown"
                        android:spinnerMode="dropdown" />
                </LinearLayout>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="bottom">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="70"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/curtain_text"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/remove_device_text" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="30"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/fridge_remove_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/remove_device_text" />
                </LinearLayout>

            </TableRow>

        </TableLayout>
    </ScrollView>


</FrameLayout>